fix overflow issue in lunch

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -100,6 +100,7 @@ body {
 }
 
 #lunch {
+    overflow: hidden;
     grid-area: lunch;
     min-height: 100%;
 }
